--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,15 @@ remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 - jekyll-include-cache
+
+minimal_mistakes_skin: "air" # "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+title: "RNABSdb"
+subtitle: "RNA Binding Sites database"
+name: "MolinerisLab"
+repository: "molinerisLab/RNABSdb"
+
+breadcrumbs: true  # disabled by default
+atom_feed:
+  hide: true
+
+search: true
