--- a/_config.yml
+++ b/_config.yml
@@ -14,3 +14,8 @@ atom_feed:
   hide: true
 
 search: true
+
+#head_scripts:
+#  - https://code.jquery.com/jquery-3.3.1.min.js
+#  - https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js
+
