--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,9 @@ atom_feed:
 
 search: true
 
+include: ["_pages"]
+
+
 #head_scripts:
 #  - https://code.jquery.com/jquery-3.3.1.min.js
 #  - https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js
