--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,4 +3,6 @@ main:
     url: /about
   - title: "Experiments Table"
     url: /experiments_table
+  - title: "Analyze your data"
+    url: /analyze
   
